[package]
name = "static-address-parser"
version = "0.1.0"
description = "Parser used by the static-address macro crate."
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/static-address"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "aptos", "sui", "macro"]

[features]
default = []
address20 = ["mv-core-types/address20"]
address32 = ["mv-core-types/address32"]

[dependencies]
mv-core-types = "0.1.5"
proc-macro2 = "1"
quote = "1"
syn = "1"
