[package]
name = "static-address"
version = "0.2.2"
description = "A macro used for compile-time parsing of Move account addresses into byte arrays for near 0-cost static addresses."
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/static-address"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"
readme = "../../README.md"
keywords = ["move", "aptos", "sui", "macro"]

[features]
default = []
address20 = ["account-address/address20", "static-address-macro/address20"]
address32 = ["account-address/address32", "static-address-macro/address32"]

[dependencies]
account-address = "0.2.3"
static-address-macro = { version = "0.2.0", path = "../static-address-macro" }
